UWP implementation with borrowed vector

--- a/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj
+++ b/source/uwp/Renderer/AdaptiveCardRenderer.vcxproj
@@ -282,6 +282,7 @@
     <ClCompile Include="lib\XamlBuilder.cpp" />
     <ClCompile Include="dll\dll.cpp" />
     <ClInclude Include="lib\XamlHelpers.h" />
+    <ClInclude Include="Vector2.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectModelProjection\ObjectModelProjection.vcxproj">
